# LeaderShip-Coach-Agent

./: .env.example  .gitignore  01_0_retrieveTranscript.py  03_EmbedVectors.py  CleanTranscripts.py  README.md  RagClass.py  RagClass2.py  apptts2.py  generate_Content.py  generate_Content2.py  leadership_api2.py  pyproject.toml  requirements.txt  runall.py  searchww.py  try2to2.py
.devcontainer/: devcontainer.json
app/: apptts2.py
cleaned_transcriptions - Kopya/: transcript_10_3f6AmRwvpQ0.txt  transcript_14_JFbEl3kXThk.txt  transcript_15_qeJArWCpORI.txt  transcript_16_HdcsejPn7qo.txt  transcript_17_0jKh8BJwPgE.txt  transcript_18_EFhDYPwipeA.txt  transcript_19_0Hq-OQIhySc.txt  transcript_1_JQhkbN75Ohs.txt  transcript_20_ABtB2xtA1EA.txt  transcript_21_tBK0q2wlGpU.txt  transcript_23_0_gUjjDZJvk.txt  transcript_24_HpPnDPN5Jbc.txt  transcript_25_OaKvIRCBVUg.txt  transcript_26_2P1JLbudG0w.txt  transcript_27_6U_rWJHrcMk.txt  transcript_3_PxL3uCdcLGw.txt  transcript_4_AY4IdMm0ZQ8.txt  transcript_5_rHlebd_URWU.txt  transcript_6_Epkr-oCVQow.txt  transcript_7_cPjxDJi-_DM.txt  transcript_8_MMCoPLq4QkQ.txt  transcript_9_ecrB3paNeXw.txt
extrafiles/: RagClass.py  app.py  apptts.py  apptts_copy.py  leadership_api.py  try1to.py  try2to.py
passiveScripts/: 01_1_retrieveTranscriptapi.py  01_2_retrieveTranscriptVideo.py  rag_qa_datafirst.json
scripts/: build_index.py  ingest_youtube.py
transcriptions - Kopya/: transcript_12_mmNbD-zatkc.txt  transcript_14_JFbEl3kXThk.txt  transcript_16_HdcsejPn7qo.txt  transcript_1_JQhkbN75Ohs.txt  transcript_23_0_gUjjDZJvk.txt  (+1 more)
(+35 files in other folders)
