[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leadership-coach"
version = "0.1.0"
requires-python = ">=3.10"
description = "Leadership Coach Agent (RAG + agents) — src layout"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
